name:                th-module-data
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ethanpailes/th-module-data#readme
license:             BSD3
license-file:        LICENSE
author:              Ethan Pailes
maintainer:          ethanpailes@gmail.com
copyright:           2017 Ethan Pailes
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     File
                     , DataLog
                     , Env
  build-depends:       base >= 4.7 && < 5
                     , cereal >= 0.5
                     , template-haskell >= 2.10
                     , directory >= 1.2
                     , filepath >= 1.4
                     , bytestring >= 0.10
                     , vector >= 0.11
                     , dynamic-mvector >= 0.1
                     , primitive >= 0.6

                     -- for development
                     , haskell-src-meta >= 0.6
  default-language:    Haskell2010
  other-modules:       Util

test-suite test-suite
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , turtle >= 1.2
                     , temporary >= 1.2
                     , system-filepath >= 0.4
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/th-module-data
