name:                data-log-example
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ethanpailes/th-module-data#readme
license:             BSD3
license-file:        LICENSE
author:              Ethan Pailes
maintainer:          ethanpailes@gmail.com
copyright:           2017 Ethan Pailes
category:            Meta
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable data-log-example
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , th-module-data >= 0.1
                     , template-haskell >= 2.10
                     , cereal >= 0.5
                     , vector >= 0.11
  other-modules:       DataLogDef
                     , ParentModule
                     , GrandParentModule
